tests/baselines/reference/declarationEmitExpressionInExtends4.errors.txt
declarationEmitExpressionInExtends4.ts(5,17): error TS2315: Type 'D' is not generic.
declarationEmitExpressionInExtends4.ts(9,18): error TS2304: Cannot find name 'SomeUndefinedFunction'.
declarationEmitExpressionInExtends4.ts(14,18): error TS2304: Cannot find name 'SomeUndefinedFunction'.


==== declarationEmitExpressionInExtends4.ts (3 errors) ====
    function getSomething() {
        return class D { }
    }
    
    class C extends getSomething()<number, string> {
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'D' is not generic.
    
    }
    
    class C2 extends SomeUndefinedFunction()<number, string> {
                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'SomeUndefinedFunction'.
    
    }
    
    
    class C3 extends SomeUndefinedFunction {
                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'SomeUndefinedFunction'.
    
    }